syntax = "proto3";

service UserService {
    rpc GetUsers (GetUsersRequest) returns (GetUsersResponse);
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc GetUserById (GetUserByIdRequest) returns (GetUserByIdResponse);
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetUserBySession (GetUserBySessionRequest) returns (GetUserBySessionResponse);
}

message User {
  int32 id    = 1;
  string name = 2;
  string password = 3;
}

message Session {
  int32 id = 1;
  string uuid = 2;
  string name = 3;
  int32 userid = 4;
}

message GetUsersRequest {
    int32 id = 1;
    string name = 2;
    string password = 3;
}

message GetUsersResponse {
    repeated User users = 1;
}

message CreateUserRequest {
    int32 id = 1;
    string name = 2;
    string password = 3;
}

message CreateUserResponse {
    string txt = 1;
}

message GetUserByIdRequest {
    int32 id = 1;
}

message GetUserByIdResponse {
    repeated User user = 1;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool isDelete = 1;
}

message LoginRequest {
  string name= 1;
  string password = 2;
}

message LoginResponse {
  int32 id = 1;
  string token = 2;
  bool isLogin = 3;
}

message GetUserBySessionRequest {
  string token= 1;
}

message GetUserBySessionResponse {
  repeated User user = 1;
}